# IRIDIS

./: .gitignore  README.html  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  android_build.yml  build-ios-unsigned.yml  build-unsigned-apk.yml  ci.yml  ios-unsigned.yml  ios.yml  pr-ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/tagging/: rapidraw_clip_candidates.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dueckis/kawaiiraweditor/: AboutDialog.kt  AppPreferences.kt  ClipAutoTagger.kt  CropTransformUi.kt  EditorHistory.kt  EditorModels.kt  EditorUiComponents.kt  ExportButton.kt  KawaiiApp.kt  LibRawDecoder.kt  MainActivity.kt  MediaUtils.kt  Permissions.kt  PreviewDecoding.kt  ProjectStorage.kt  SettingsScreen.kt  StartupSplash.kt  StartupUpdateChecker.kt
app/src/main/java/com/dueckis/kawaiiraweditor/domain/: CurvesMath.kt  HistogramData.kt  HistogramUtils.kt
app/src/main/java/com/dueckis/kawaiiraweditor/widget/: EditedGalleryWidgetFactory.kt  EditedGalleryWidgetProvider.kt  EditedGalleryWidgetService.kt  EditedImagesRepository.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: widget_edited_gallery.xml  widget_item_image.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: edited_gallery_widget_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: Info.plist  project.yml
iosApp/Sources/: KawaiiRawEditorApp.swift  ViewController.swift  iOSApp.swift
rust/: Cargo.toml
rust/src/: lib.rs  masks.rs  raw_processing.rs
rust/src/model/: adjustments.rs  curves.rs  mod.rs  payloads.rs
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/dueckis/kawaiiraweditor/: App.kt
shared/src/iosMain/kotlin/com/dueckis/kawaiiraweditor/: MainViewController.kt
(+146 files in other folders)
